--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -34,6 +34,11 @@
 - name: Allow ssh traffic
   ufw: rule=allow port={{ ubuntu_common_ssh_port }} proto=tcp
 
+- name: Install fail2ban config
+  template: src=jail.local.j2 dest=/etc/fail2ban/jail.local
+  notify:
+    - reload fail2ban
+
 - name: Set up Postfix to relay mail
   debconf: name=postfix
            question='{{ item.question }}'
