Add task to configure system reboot when out of memory
“…it is good to automatically reboot your server when it runs out of
memory. This will cause a minute or two of downtime, but it’s better
than languishing in the swapping state for potentially hours or days.”
(http://feross.org/how-to-setup-your-linode/)

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -74,3 +74,13 @@
               line="PermitRootLogin no"
               state=present
   notify: Restart ssh
+
+- name: Set system to reboot when out of memory
+  lineinfile:
+    dest: /etc/sysctl.conf
+    regexp: "{{ item.regexp }}"
+    line: "{{ item.line }}"
+    state: present
+  with_items:
+    - { regexp: '^vm.panic_on_oom', line: 'vm.panic_on_oom=1' }
+    - { regexp: '^kernel.panic', line: 'kernel.panic=10' }
