Add MySQL users and credentials

--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -6,6 +6,10 @@ ubuntu_common_deploy_user_name: "{{ vault_ubuntu_common_deploy_user_name }}"
 ubuntu_common_deploy_public_keys:
   - ~/.ssh/id_rsa.pub
 
+mysql_root_password: "{{ vault_mysql_root_password }}"
+mysql_deploy_user_name: "{{ vault_mysql_deploy_user_name }}"
+mysql_deploy_user_password_plain: "{{ vault_mysql_deploy_user_password_plain }}"
+
 ubuntu_common_ssh_port: "{{ vault_ubuntu_common_ssh_port }}"
 ansible_port: "{{ vault_ubuntu_common_ssh_port }}"
 
