Collapse task files for mysql role

--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -1,2 +1,48 @@
 ---
-- include: mysql.yml
+- name: Install MySQL package
+  apt: pkg={{ item }} state=installed
+  with_items:
+   - mysql-server
+   - libmysqlclient-dev
+   - mysql-client
+   - python-mysqldb
+
+- name: Start MySQL Service
+  service: name=mysql state=started enabled=yes
+
+- name: Ensure MySQL root password is set
+  mysql_user: name=root host=localhost password={{ mysql_root_password_plain }}
+
+- name: Place .my.cnf file with MySQL credentials in root
+  template:
+      src: .my.cnf.j2
+      dest: /root/.my.cnf
+      owner: root
+      mode: 0600
+  notify:
+  - Restart mysql
+
+- name: Update MySQL root password for all root accounts
+  mysql_user: name=root host={{ item }} password={{ mysql_root_password_plain }}
+  with_items:
+    - "{{ ansible_hostname }}"
+    - 127.0.0.1
+    - ::1
+
+- name: Ensure anonymous users are not in the database
+  mysql_user: name='' host={{ item }} state=absent
+  with_items:
+    - localhost
+    - "{{ ansible_hostname }}"
+
+- name: Remove the test database
+  mysql_db: name=test state=absent
+
+- name: Create MySQL deploy DB user
+  mysql_user: name={{ mysql_deploy_user_name }} password={{ mysql_deploy_user_password_plain }} priv=*.*:ALL host='%' state=present
+
+- name: Optimize all tables weekly
+  cron: name="Optimize MySQL tables" weekday="0" hour="3" minute="0" job="mysqlcheck -o -A"
+
+#- name: Create Application Database
+#  mysql_db: name={{ dbname }} state=present
