--- a/group_vars/all/apache-vars.yml
+++ b/group_vars/all/apache-vars.yml
@@ -1,8 +1,10 @@
 ---
 # See https://galaxy.ansible.com/geerlingguy/apache/
+# Note that the apache role does not create the doc root folders specified here,
+# it only configures Apache to refer to them.
+
 apache_remove_default_vhost: true
 apache_vhosts:
   - servername: "test.joeldueck.com"
-    documentroot: "/home/{{ ubuntu_common_deploy_user_name }}/www/test.joeldueck.com"
+    documentroot: "/home/{{ ubuntu_common_deploy_user_name }}/www/test.joeldueck.com/web/public"
     serveralias: "test.joeldueck.com"
-    serveradmin: "joel@jdueck.net"
