--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -5,6 +5,7 @@ UBUNTU_COMMON_LOGWATCH_EMAIL: "{{ vault_UBUNTU_COMMON_LOGWATCH_EMAIL }}"
 ubuntu_common_deploy_user_name: "{{ vault_ubuntu_common_deploy_user_name }}"
 ubuntu_common_deploy_public_keys:
   - ~/.ssh/id_rsa.pub
+server_admin_email: "{{ vault_server_admin_email }}"
 
 mysql_root_password_plain: "{{ vault_mysql_root_password_plain }}"
 mysql_deploy_user_name: "{{ vault_mysql_deploy_user_name }}"
@@ -27,3 +28,6 @@ fail2ban:
     ignoreip: 127.0.0.1/8
     bantime: 3600
     maxretry: 3
+
+web_domains:
+    - test.joeldueck.com
