--- a/roles/websites/templates/vhost.conf
+++ b/roles/websites/templates/vhost.conf
@@ -10,4 +10,9 @@
      AllowOverride All
      Require all granted
   </Directory>
+ProxyPassMatch ^/(.*\.php(/.*)?)$ "fcgi://127.0.0.1:9000/var/www/example"
+RewriteEngine on
+RewriteCond %{SERVER_NAME} ={{ item }} [OR]
+RewriteCond %{SERVER_NAME} =*.{{ item }}
+RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,QSA,R=permanent]
 </VirtualHost>
