Add roles for PHP + configuration to playbooks

--- a/site-initonce.yml
+++ b/site-initonce.yml
@@ -11,5 +11,8 @@
     - common
     - mysql
     - geerlingguy.apache
+    - geerlingguy.php
+    - geerlingguy.apache-php-fpm
+    - geerlingguy.php-mysql
     - websites
     - certbot
