Use proper vars for ProxyPass in vhosts template

--- a/roles/websites/templates/vhost.conf
+++ b/roles/websites/templates/vhost.conf
@@ -10,7 +10,7 @@
      AllowOverride All
      Require all granted
   </Directory>
-ProxyPassMatch ^/(.*\.php(/.*)?)$ "fcgi://127.0.0.1:9000/var/www/example"
+ProxyPassMatch ^/(.*\.php(/.*)?)$ "fcgi://127.0.0.1:9000/home/{{ ubuntu_common_deploy_user_name }}/www/{{ item }}/web/public"
 RewriteEngine on
 RewriteCond %{SERVER_NAME} ={{ item }} [OR]
 RewriteCond %{SERVER_NAME} =*.{{ item }}
